settings for customer service

--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,7 +1,10 @@
-<div class="bd-form">
-  <bd-input
-    placeholder="Input something"
-    [collapsibleInput]="false"
-    [labelText]="'Name or MC#'">
-  </bd-input>
+<div style="margin:30px auto; background:#777777; max-width:500px; width:100%; padding:50px;">
+
+  <div class="bd-form">
+    <bd-input
+      [labelText]="'Name or MC#'">
+      <span class="suffix" bd-prefix>$&nbsp;</span>
+    </bd-input>
+  </div>
+
 </div>
