FSPA-107 #comment fixed custom textarea functionality

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -39,6 +39,7 @@
 
             <textarea
               #input
+              style="resize: none; border: none; overflow: auto; padding: 0; width:100%"
               *ngIf="_elementType === 'textarea'"
               md-autosize
               [disabled]="disabled"
