--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -26,7 +26,8 @@ $error-background: rgba(251, 58, 58, .2);
 	position: relative;
 	overflow: hidden;
 	width: 100%;
-	height: 50px;
+	height: 100%;
+	min-height: 50px;
 	border-bottom: 1px solid $iron;
 	margin-bottom: 0;
 	flex-flow: row wrap;
@@ -39,7 +40,11 @@ $error-background: rgba(251, 58, 58, .2);
 		font-size: 10px;
 		text-transform: uppercase;
 
-		label,
+		label {
+			margin: 0;
+			font-weight: normal;
+		}
+
 		textarea {
 			display: flex;
 			height: 100%;
@@ -135,7 +140,7 @@ $error-background: rgba(251, 58, 58, .2);
 
 	&.bd-collapsed-input {
 		.bd-label {
-			width: 100%;
+			width: auto;
 			color: $nobel;
 			font-size: 16px;
 			text-align: left;
@@ -146,6 +151,7 @@ $error-background: rgba(251, 58, 58, .2);
 				justify-content: flex-start;
 			}
 		}
+
 	}
 
 	&.bd-expanded-input {
