FSPA-107 #changed name of directive

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -41,7 +41,7 @@
               #input
               style="resize: none; border: none; overflow: auto; padding: 0; width:100%"
               *ngIf="_elementType === 'textarea'"
-              md-autosize
+              bd-autosize
               [disabled]="disabled"
               [(ngModel)]="value"
               [attr.maxlength]="maxlength"
