FSPA-84 #comment redesign autosize label

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,6 +63,6 @@ Home page
 
   <bd-textarea
   [collapsibleInput]="true"
-  [labelText]="'textarea'">
+  [labelText]="'Estimated distance Estimated'">
   </bd-textarea>
 </div>
