--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -21,6 +21,30 @@ $error-background: rgba(251, 58, 58, .2);
 	flex-direction: row;
 }
 
+@mixin input-textarea {
+	position: relative;
+	z-index: 1;
+	width: 100%;
+	padding: 8px 0;
+	border: 0;
+	background: none;
+	box-shadow: none;
+	outline: 0;
+	resize: none;
+
+	&:focus {
+		&::placeholder {
+			color: $nobel;
+			opacity: 1;
+		}
+	}
+
+	&::placeholder {
+		color: $white;
+		opacity: 0;
+	}
+}
+
 .bd-input-wrapper {
 	@include flex-element;
 	position: relative;
@@ -34,28 +58,19 @@ $error-background: rgba(251, 58, 58, .2);
 	background-color: $white;
 
 	.bd-label {
+		display: flex;
 		width: 80px;
-		height: 100%;
+		height: 50px;
 		color: $nobel;
 		font-size: 10px;
+		align-self: flex-start;
 		text-transform: uppercase;
+		align-items: center;
+		justify-content: flex-end;
 
 		label {
 			margin: 0;
 			font-weight: normal;
-		}
-
-		textarea {
-			display: flex;
-			overflow: auto;
-			width: 100%;
-			height: 100%;
-			padding: 0;
-			border: 0;
-			font-weight: normal;
-			justify-content: flex-end;
-			align-items: center;
-			resize: none;
 		}
 	}
 
@@ -67,6 +82,11 @@ $error-background: rgba(251, 58, 58, .2);
 
 		.bd-input-prefix {
 			@include flex-element;
+			display: flex;
+			height: 50px;
+			align-self: flex-start;
+			align-items: center;
+			justify-content: flex-end;
 			margin-right: 15px;
 			flex-grow: 0;
 		}
@@ -74,32 +94,16 @@ $error-background: rgba(251, 58, 58, .2);
 		.bd-input-infix {
 			@include flex-element;
 			flex-grow: 1;
+			min-height: 50px;
 
-			input,
+			input {
+				@include input-textarea;
+			}
+
 			textarea {
-				position: relative;
-				z-index: 1;
-				top: 0;
-				width: 100%;
-				padding: 8px 0;
-				border: 0;
-				background: none;
-				left: 0;
-				box-shadow: none;
-				outline: 0;
-				resize: none;
-
-				&:focus {
-					&::placeholder {
-						color: $nobel;
-						opacity: 1;
-					}
-				}
-
-				&::placeholder {
-					color: $white;
-					opacity: 0;
-				}
+				@include input-textarea;
+				align-self: flex-start;
+				margin-top: 7px;
 			}
 		}
 
