FSPA-84 small changes

--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -149,6 +149,11 @@ $error-background: rgba(251, 58, 58, .2);
 	}
 
 	&.bd-collapsed-input {
+
+		.bd-input {
+			width: 0;
+		}
+
 		.bd-label {
 			width: auto;
 			color: $nobel;
@@ -156,10 +161,7 @@ $error-background: rgba(251, 58, 58, .2);
 			text-align: left;
 			padding-left: 17px;
 			flex-grow: 1;
-
-			label {
-				justify-content: flex-start;
-			}
+			justify-content: flex-start;
 		}
 
 	}
