--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,6 +52,11 @@ Home page
         [attr.name]="'Andrew'">
     </bd-input>
 
+<div style="margin-top:30px;"></div>
+<bd-input
+    placeholder="placeholder"
+    [collapsibleInput]="false">
+</bd-input>
 
   <div style="margin-top:30px;"></div>
   <bd-textarea
