--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -5,7 +5,7 @@
      [class.bd-expanded-input]="!isCollapsed"
 >
         <div class="bd-label"
-             [class.bd-hidden-label]="!isEmptyLabel">
+             [class.bd-hidden-label-prefix]="!isEmptyLabel">
           <label
             class="bd-input-placeholder"
             for="customer-input-id">
@@ -14,7 +14,9 @@
         </div>
         <div class="bd-input">
 
-          <div class="bd-input-prefix">
+          <div class="bd-input-prefix"
+            [class.bd-hidden-label-prefix]="!isEmptyLabel"
+          >
             <ng-content select="[bd-prefix]"></ng-content>
           </div>
 
