--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -51,6 +51,7 @@ $error-background: rgba(251, 58, 58, .2);
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	padding: 0 17px;
 	min-height: 50px;
 	border-bottom: 1px solid $iron;
 	margin-bottom: 0;
@@ -74,7 +75,7 @@ $error-background: rgba(251, 58, 58, .2);
 			font-weight: normal;
 		}
 
-		&.bd-hidden-label {
+		&.bd-hidden-label-prefix {
 			display: none;
 		}
 	}
@@ -93,6 +94,10 @@ $error-background: rgba(251, 58, 58, .2);
 			justify-content: flex-end;
 			margin-right: 15px;
 			flex-grow: 0;
+
+			&.bd-hidden-label-prefix {
+				display: none;
+			}
 		}
 
 		.bd-input-infix {
@@ -163,7 +168,6 @@ $error-background: rgba(251, 58, 58, .2);
 			color: $nobel;
 			font-size: 16px;
 			text-align: left;
-			padding-left: 17px;
 			flex-grow: 1;
 			justify-content: flex-start;
 		}
