fspa-90 add customer model, add customer fields

--- a/src/app/forms/customer-form/customer-form.component.html
+++ b/src/app/forms/customer-form/customer-form.component.html
@@ -1,7 +1,23 @@
 <form [formGroup]="customerForm">
-	<bd-input
-			[labelText]="'Company Name'"
-			formControlName="companyName"
-	>
+	<template #typeHeaderTemplate>
+        Select Customer Type
+  </template>
+
+	<template #enumItemTemplate let-item="item">
+        {{item}}
+  </template>
+
+	<bd-input [labelText]="'Company Name'" formControlName="companyName">
 	</bd-input>
+	<bd-dropdown [dropdownHeaderTemplate]="typeHeaderTemplate" [dropdownItemTemplate]="enumItemTemplate" [selectedValue]="selectedCustomerType" [items]="customerTypes">
+	</bd-dropdown>
+	<bd-dropdown [dropdownHeaderTemplate]="typeHeaderTemplate" [dropdownItemTemplate]="enumItemTemplate" [selectedValue]="selectedCustomerType" [items]="customerTypes">
+	</bd-dropdown>
+	<bd-input [labelText]="'MC #'" formControlName="mc">
+	</bd-input>
+	<bd-input [labelText]="'Tax ID (W9)'" formControlName="taxId">
+	</bd-input>
+	<div>
+		<button type="submit" [disabled]="!customerForm.valid">Submit</button>
+	</div>
 </form>
