--- a/src/app/loads/loads.component.html
+++ b/src/app/loads/loads.component.html
@@ -1,5 +1,7 @@
-<div class="row">
-    <div class="col-sm-3 col-centered">
-				<customer-form> </customer-form>
-		</div>
+<div class="container">
+  <div class="row row-centered">
+      <div class="col-sm-4 col-centered">
+  				<customer-form [customer]="selectedCustomer"></customer-form>
+  		</div>
+  </div>
 </div>
