--- a/src/app/navigation-bar/navigation-bar.component.scss
+++ b/src/app/navigation-bar/navigation-bar.component.scss
@@ -3,41 +3,97 @@ $white: #fff;
 $black: #000;
 $logo-letter-color: #a4c2f4;
 $tango: #e67517;
-
+$active-background-color: #75b3e2;
+$hover-background-color: #30353b;
+$icon-color: #9ea3a9;
+$sub-munu-background-color: #485158;
+$sub-munu-color: #a4a9af;
 
 .side-menu {
 	z-index: 99999;
-	width: 140px;
+	width: 130px;
 	height: 100%;
-	padding: 0 15px;
+	padding: 0;
 	background-color: $shark;
+}
 
-	.menu-item {
-		display: block;
-		width: 90%;
-		height: 40px;
-		border-top: 15px solid $white;
-		border-left: 15px solid $white;
-		border-bottom: 7px solid $black;
-		border-right: 26px solid $black;
-		margin-bottom: 40px;
+.menu-item {
+	width: 100%;
 
-		a {
-			position: relative;
-			padding: 45px 40px 0 0;
-			color: $white;
-			cursor: pointer;
-			background-color: transparent;
-			bottom: -27px;
-			margin-left: 15px;
-			left: -30px;
-			white-space: nowrap;
-			text-decoration: none;
+	.sub-menu {
+		display: none;
+		width: 130px;
+		background-color: $sub-munu-background-color;
+
+		.sub-menu-item {
+			width: 130px;
+			height: 30px;
+
+			a {
+				padding: 6px 10px 6px 40px;
+				color: $sub-munu-color;
+			}
+
+			&:first-child {
+				a {
+					padding-top: 9px;
+					padding-bottom: 3px;
+				}
+			}
+
+			&:last-child {
+				a {
+					padding-top: 3px;
+					padding-bottom: 9px;
+				}
+			}		
 		}
+	}
 
-		&.active {
-			border-top-color: $logo-letter-color;
-			border-left-color: $logo-letter-color;
+	.menu-icon {
+		display: inline-block;
+		width: 22px;
+		height: 22px;
+		margin: 9px 0 3px 10px;
+		mask:  url('../../assets/img/menu-icon.svg') no-repeat;
+		background-color: $icon-color;
+	}
+
+	a {
+		position: absolute;		
+		width: 130px;
+		padding: 10px 10px 10px 40px;
+		color: $white;
+		cursor: pointer;
+		left: 0;
+		background-color: transparent;
+		white-space: nowrap;
+		text-decoration: none;
+	}
+
+	&:not(.active) {
+		&:hover {
+			background-color: $hover-background-color;
+
+			.sub-menu {
+				position: absolute;
+				z-index: 9999;
+				display: block;
+				margin-left: 130px;
+				margin-top: -40px;
+
+				a {
+					padding-left: 20px;
+
+					&:hover {
+						color: $logo-letter-color;
+					}
+				}
+			}
+
+			.menu-icon {
+				background-color: $logo-letter-color;
+			}
 
 			a {
 				color: $logo-letter-color;
@@ -45,27 +101,56 @@ $tango: #e67517;
 		}
 	}
 
-	.logo-container {
-		width: 100%;
-		text-align: center;
-		padding-top: 20px;
-		padding-bottom: 20px;
+	&.active {
+		background-color: $active-background-color;
 
-		span {
-			font-family: Orbitron;
-			text-transform: uppercase;
-			font-weight: 600;
+		.menu-icon {
+			background-color: $white;
 		}
 
-		.logo-letter {
+		.sub-menu {
+			display: block;
+
+			.sub-menu-item {
+				&.active {
+					a {
+						color: $white;
+					}
+				}
+			}
+		}
+
+		>a {
 			color: $white;
-			font-size: 24px;
-		}
-
-		.logo-number {
-			color: $tango;
-			font-size: 24px;
-			margin-left: -3px;
 		}
 	}
+}
+
+.logo-container {
+	width: 100%;
+	text-align: center;
+	padding-top: 10px;
+	padding-bottom: 10px;
+
+	span {
+		font-family: Orbitron;
+		text-transform: uppercase;
+		font-weight: 600;
+	}
+
+	.logo-letter {
+		color: $white;
+		font-size: 24px;
+	}
+
+	.logo-number {
+		color: $tango;
+		font-size: 24px;
+		margin-left: -3px;
+	}
+}
+
+layout-switch {
+	position: absolute;
+	bottom: 0;
 }
