--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -111,14 +111,6 @@ $error-background: rgba(251, 58, 58, .2);
 			@include flex-element;
 			flex-grow: 0;
 		}
-
-		.error-message {
-			display: none;
-		}
-	}
-
-	+ .error-message {
-		display: none;
 	}
 
 	&.bd-focused {
@@ -126,25 +118,6 @@ $error-background: rgba(251, 58, 58, .2);
 
 		.bd-label {
 			color: $seagul;
-		}
-	}
-
-	&.bd-invalid {
-		border-bottom-color: $error;
-
-		.bd-label {
-			color: $error;
-		}
-
-		+ .error-message {
-			@include flex-element;
-			background: $error-background;
-			color: $error;
-			text-align: left;
-
-			i {
-				margin: 0 15px 0 17px;
-				}
 		}
 	}
 
@@ -163,14 +136,40 @@ $error-background: rgba(251, 58, 58, .2);
 			flex-grow: 1;
 			justify-content: flex-start;
 		}
-
+		
 	}
 
 	&.bd-expanded-input {
 		.bd-label {
 			text-align: right;
-			animation: labelFlight .1s 1;
+			animation: labelFlight 0.1s 1;
+		}
+	}
+}
+
+:host(.ng-valid) {
+	.error-message {
+		display: none;
+	}
+}
+
+:host(.ng-invalid) {
+	.error-message {
+		@include flex-element;
+		background: $error-background;
+		color: $error;
+		text-align: left;
+
+		i {
+			margin: 0 15px 0 17px;
 		}
 	}
 
+	.bd-input-wrapper {
+		border-bottom-color: $error;
+
+		.bd-label {
+			color: $error;
+		}
+	}
 }
