--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@ Home page
 
 <div style="width:500px; margin:100px auto;">
     <bd-input
-        placeholder="placeholder"
+        [placeholder]=""
         [collapsibleInput]="false"
         [labelText]="'date'">
         <span class="prefix" bd-prefix>$&nbsp;</span>
@@ -54,7 +54,7 @@ Home page
 
 <div style="margin-top:30px;"></div>
 <bd-input
-    placeholder="placeholder"
+    placeholder=""
     [collapsibleInput]="false">
 </bd-input>
 
