FSPA-111 #comment add load-form (also changed some styles of bd-typeahead)

--- a/src/app/common/bd-typeahead/bd-typeahead.component.html
+++ b/src/app/common/bd-typeahead/bd-typeahead.component.html
@@ -5,9 +5,7 @@
     </bd-form-button>
   </template>
   <template #loaderTemplate>
-    <div class='loader'>
-      <img src="../../assets/img/spinner.png" alt="">
-    </div>
+    <bd-spinner></bd-spinner>
   </template>
   <bd-input [(ngModel)]="value"
       [typeahead]="source"
