fixed placeholder, styles for empty bd-inp

--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -27,7 +27,7 @@
               [disabled]="disabled"
               [attr.maxlength]="maxlength"
               (focus)="_handleFocus($event)"
-              placeholder=""
+              placeholder="{{placeholder}}"
               (change)="_handleChange($event)"
               (blur)="_handleBlur($event)"
               [attr.name]="name"
