--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -38,7 +38,7 @@ Home page
 
 <div style="width:500px; margin:100px auto;">
     <bd-input
-        [placeholder]=""
+        placeholder=""
         [collapsibleInput]="false"
         [labelText]="'date'">
         <span class="prefix" bd-prefix>$&nbsp;</span>
