--- a/src/app/common/bd-input/bd-input.component.html
+++ b/src/app/common/bd-input/bd-input.component.html
@@ -13,9 +13,7 @@
         </div>
         <div class="bd-input">
 
-          <div class="bd-input-prefix">
-            <ng-content select="[bd-prefix]"></ng-content>
-          </div>
+          <div class="bd-input-prefix"><ng-content class="qq" select="[bd-prefix]"></ng-content></div>
 
           <div class="bd-input-infix">
             <input
@@ -52,9 +50,7 @@
               id="customer-input-id"
             ></textarea>
           </div>
-          <div class="bd-input-suffix">
-            <ng-content select="[bd-sufix]"></ng-content>
-          </div>
+          <div class="bd-input-suffix"><ng-content select="[bd-suffix]"></ng-content></div>
         </div>
       </div>
       <div class="error-message">
