--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -42,6 +42,7 @@ Home page
         [collapsibleInput]="false"
         [labelText]="'date'">
         <span class="prefix" bd-prefix>$&nbsp;</span>
+        <span  bd-suffix>$&nbsp;</span>
     </bd-input>
 
     <div style="margin-top:30px;"></div>
