add active class to footer of autocomplete element

--- a/src/app/common/bd-typeahead/bd-typeahead.component.html
+++ b/src/app/common/bd-typeahead/bd-typeahead.component.html
@@ -9,6 +9,7 @@
   </template>
   <bd-input [(ngModel)]="value"
       [typeahead]="source"
+      [collapsibleInput]="false"
       [labelText]="labelText"
       [typeaheadItemTemplate]="itemTemplate"
       [typeaheadFooterTemplate]="footerTemplate"
