--- a/src/app/common/bd-input/bd-input.component.scss
+++ b/src/app/common/bd-input/bd-input.component.scss
@@ -66,6 +66,7 @@ $error-background: rgba(251, 58, 58, .2);
 		font-size: 10px;
 		align-self: flex-start;
 		text-transform: uppercase;
+		margin-left: -17px;
 		margin-right: 32px;
 		align-items: center;
 		justify-content: flex-end;
@@ -94,10 +95,6 @@ $error-background: rgba(251, 58, 58, .2);
 			justify-content: flex-end;
 			flex-grow: 0;
 			margin-right: 15px;
-
-			&:empty {
-				margin-right: 0;
-			 }
 		}
 
 		.bd-input-infix {
@@ -111,6 +108,7 @@ $error-background: rgba(251, 58, 58, .2);
 
 			textarea {
 				@include input-textarea;
+				overflow: hidden;
 				align-self: flex-start;
 				margin-top: 7px;
 			}
@@ -120,10 +118,6 @@ $error-background: rgba(251, 58, 58, .2);
 			@include flex-element;
 			flex-grow: 0;
 			margin-left: 15px;
-
-			&:empty {
-				margin-right: 0;
-			 }
 		}
 	}
 
@@ -143,6 +137,7 @@ $error-background: rgba(251, 58, 58, .2);
 
 		.bd-label {
 			width: auto;
+			margin: 0;
 			color: $nobel;
 			font-size: 16px;
 			text-align: left;
