--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -37,6 +37,8 @@ Home page
     [limit]="10">
 </datatable>
 
+
+<!-- bd-inputs and bd-textarea with prefixes and suffixes and without them -->
 <div style="width:500px; margin:100px auto;">
     <bd-input
         placeholder=""
