--- a/src/app/multi-slot-layout/multi-slot-layout.component.html
+++ b/src/app/multi-slot-layout/multi-slot-layout.component.html
@@ -1,15 +1,15 @@
 <div class="main-area">
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.FIRST_SLOT_VISIBLE)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.FirstSlotVisible)">
         <div class="panel">
             <ng-content select="first-slot"></ng-content>
         </div>
     </div>
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.SECOND_SLOT_VISIBLE)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.SecondSlotVisible)">
         <div class="panel">
             <ng-content select="second-slot"></ng-content>
         </div>
     </div>
-    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.THIRD_SLOT_VISIBLE)">
+    <div [ngClass]="getClass()" *ngIf="isVisible(switchStateEnum.ThirdSlotVisible)">
         <div class="panel">
             <ng-content select="third-slot"></ng-content>
         </div>
