FSPA-96 review fixes

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<multi-slot-layout>
-    <first-slot>
+<multi-pane-layout>
+    <first-pane>
         <div style="margin:50px auto; width:400px; background:#c1c1c1;padding:20px;">
         <template #dropdownHeaderTemplate>
                 Leave empty
@@ -72,13 +72,13 @@
         [labelText]="'Estimated distance Estimated'">
         </bd-textarea>
         </div>
-    </first-slot>
+    </first-pane>
 
-    <second-slot>
+    <second-pane>
 
-    </second-slot>
+    </second-pane>
     
-    <third-slot>
+    <third-pane>
 
-    </third-slot>
-</multi-slot-layout>
+    </third-pane>
+</multi-pane-layout>
