--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,23 +1,53 @@
 /* colors */
 $white: #fff;
-$black: #000;
-$seagul: #75b3e2;
-$nobel: #b3b2b2;
-$iron: #d7d8db;
-$dropitem: #f5fefe;
-$error: #fb3a3a;
-$error-background: rgba(251, 58, 58, .2);
+$black: #30353b;
+$dark-grey: #b3b2b2;
+$grey: #d7d8db;
+$light-grey: #f0f0f0;
+$blue: #75b3e2;
+$light-blue: #f5fefe;
+$serenity: #f5f9fc;
+$red: #fc3b3b;
+$light-red: #ffebeb;
+
+/*  */
+$text-color: $black;
+
+/* labels */
+$label-default: $dark-grey;
+$label-active: $blue;
+$label-warning: $red;
+
+/* buttons */
+$btn-blue-background: $blue;
+$btn-blue-color: $white;
+
+$btn-grey-background: $light-grey;
+$btn-grey-color: $black;
+
+
+/* placeholder */
+$placeholder-color: $dark-grey;
 
 /* fonts */
-$small-font-size: 10px;
 $base-font-size: 16px;
-$large-font-size: 24px;
+
+$mini-font-size: .625rem;
+$tiny-font-size: .75rem;
+$small-font-size: .875rem;
+$large-font-size: 1.25rem;
 
 /* form paddings */
 $default-form-padding: 17px;
 
-/* form element's margin */
-$default-form-margin: 15px;
-
 /* form border */
-$default-form-border: 1px solid $nobel;
+$border: 1px solid $grey;
+$active-border: 1px solid $blue;
+$error-border: 1px solid $red;
+
+
+
+
+
+/* default border radius */
+$default-border-radius: 3px;
