--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -4,6 +4,7 @@ $black: #30353b;
 $dark-grey: #b3b2b2;
 $grey: #d7d8db;
 $light-grey: #f0f0f0;
+$dirty-grey: #b7bcc1;
 $blue: #75b3e2;
 $light-blue: #f5fefe;
 $serenity: #f5f9fc;
@@ -37,6 +38,21 @@ $tiny-font-size: .75rem;
 $small-font-size: .875rem;
 $large-font-size: 1.25rem;
 
+@font-face {
+	font-family: 'SFUIText-Bold';
+	src: ('../fonts/sf-bold.woff');
+}
+
+@font-face {
+	font-family: 'SFUIText-Medium';
+	src: ('../fonts/sf-medium.woff');
+}
+
+@font-face {
+	font-family: 'SFUIText-Regular';
+	src: ('../fonts/sf-regular.woff');
+}
+
 /* form paddings */
 $default-form-padding: 17px;
 
@@ -44,8 +60,6 @@ $default-form-padding: 17px;
 $border: 1px solid $grey;
 $active-border: 1px solid $blue;
 $error-border: 1px solid $red;
-
-
 
 
 
