--- a/src/app/shared/components/bd-input/bd-input.component.scss
+++ b/src/app/shared/components/bd-input/bd-input.component.scss
@@ -1,9 +1,4 @@
-$white: #fff;
-$seagul: #75b3e2;
-$nobel: #b3b2b2;
-$iron: #d7d8db;
-$error: #fb3a3a;
-$error-background: rgba(251, 58, 58, .2);
+@import '../../../../assets/styles/variables';
 
 @keyframes labelFlight {
 	from {
@@ -34,7 +29,7 @@ $error-background: rgba(251, 58, 58, .2);
 
 	&:focus {
 		&::placeholder {
-			color: $nobel;
+			color: $label-default;
 			opacity: 1;
 		}
 	}
@@ -52,8 +47,8 @@ $error-background: rgba(251, 58, 58, .2);
 	width: 100%;
 	height: 100%;
 	padding: 0 17px;
-	min-height: 50px;
-	border-bottom: 1px solid $iron;
+	min-height: $input-height;
+	border-bottom: $border;
 	margin-bottom: 0;
 	flex-flow: row wrap;
 	background-color: $white;
@@ -61,9 +56,9 @@ $error-background: rgba(251, 58, 58, .2);
 	.bd-label {
 		display: flex;
 		width: 80px;
-		height: 50px;
-		color: $nobel;
-		font-size: 10px;
+		height: $input-height;
+		color: $label-default;
+		font-size: $mini-font-size;
 		align-self: flex-start;
 		text-transform: uppercase;
 		margin-left: -17px;
@@ -89,7 +84,7 @@ $error-background: rgba(251, 58, 58, .2);
 		.bd-input-prefix {
 			@include flex-element;
 			display: flex;
-			height: 50px;
+			height: $input-height;
 			align-self: flex-start;
 			align-items: center;
 			justify-content: flex-end;
@@ -100,7 +95,7 @@ $error-background: rgba(251, 58, 58, .2);
 		.bd-input-infix {
 			@include flex-element;
 			flex-grow: 1;
-			min-height: 50px;
+			min-height: $input-height;
 
 			input {
 				@include input-textarea;
@@ -122,10 +117,10 @@ $error-background: rgba(251, 58, 58, .2);
 	}
 
 	&.bd-focused {
-		border-bottom-color: $seagul;
+		border-bottom-color: $label-active;
 
 		.bd-label {
-			color: $seagul;
+			color: $label-active;
 		}
 	}
 
@@ -138,8 +133,8 @@ $error-background: rgba(251, 58, 58, .2);
 		.bd-label {
 			width: auto;
 			margin: 0;
-			color: $nobel;
-			font-size: 16px;
+			color: $dark-grey;
+			font-size: $default-font-size;
 			text-align: left;
 			flex-grow: 1;
 			justify-content: flex-start;
@@ -162,8 +157,8 @@ $error-background: rgba(251, 58, 58, .2);
 :host(.ng-invalid) {
 	.error-message {
 		@include flex-element;
-		background: $error-background;
-		color: $error;
+		background: $light-red;
+		color: $label-warning;
 		text-align: left;
 
 		i {
@@ -172,10 +167,10 @@ $error-background: rgba(251, 58, 58, .2);
 	}
 
 	.bd-input-wrapper {
-		border-bottom-color: $error;
+		border-bottom-color: $label-warning;
 
 		.bd-label {
-			color: $error;
+			color: $label-warning;
 		}
 	}
 }
