--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -61,3 +61,6 @@ $large-font-size: 1.25rem;
 	font-family: 'SFUIText-Regular';
 	src: ('../fonts/sf-regular.woff');
 }
+
+/* default input height */
+$input-height: 50px;
