--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,17 +14,16 @@
 
 $black-squeeze: #f5f9fc;
 
-
-html, 
+html,
 body {
 	height: 100%;
+	font-size: 16px;
 }
 
 body {
 	overflow: hidden;
 	background: $black-squeeze;
-	font-family: 'SFUIText-Medium, Arial, Helvetica, sans-serif';
-	font-size: 14px;
+	font-family: 'SFUIText-Regular', Arial, Helvetica, sans-serif;
 }
 
 app {
