--- a/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
+++ b/src/app/shared/components/bd-dropdown/bd-dropdown.component.scss
@@ -1,26 +1,20 @@
-$white: #fff;
-$black: #000;
-$seagul: #75b3e2;
-$nobel: #b3b2b2;
-$iron: #d7d8db;
-$error: #fb3a3a;
-$dropitem: #f5fefe;
+@import '../../../../assets/styles/variables';
 
 .bd-dropdown-container {
 
 	.bd-dropdown-wrapper {
 		display: flex;
 		width: 100%;
-		height: 50px;
+		height: $input-height;
 		background: $white;
-		border-bottom: 1px solid $seagul;
+		border-bottom: $active-border;
 		outline: 0;
 		align-items: center;
 		justify-content: space-between;
 
 		.bd-dropdown-label {
 			width: 80px;
-			color: $seagul;
+			color: $label-active;
 			text-align: right;
 			margin-right: 32px;
 
@@ -35,7 +29,7 @@ $dropitem: #f5fefe;
 			flex-grow: 1;
 
 			span {
-				color: $nobel;
+				color: $label-default;
 			}
 
 			.item-selected {
@@ -44,7 +38,7 @@ $dropitem: #f5fefe;
 			}
 
 		.bd-dropdown-icon {
-			color: $nobel;
+			color: $label-default;
 			margin-right: 17px;
 		}
 
@@ -62,7 +56,7 @@ $dropitem: #f5fefe;
 
 		div {
 			display: flex;
-			height: 50px;
+			height: $input-height * 3;
 			align-items: center;
 		}
 
@@ -70,24 +64,24 @@ $dropitem: #f5fefe;
 			overflow: scroll;
 			padding: 0;
 			margin: 0;
-			border-top: 1px solid $seagul;
+			border-top: $active-border;
 			max-height: 150px;
 
 			li {
 				display: flex;
-				height: 50px;
+				height: $input-height;
 				background: $white;
 				color: $black;
 				padding-left: 17px;
-				border-bottom: 1px solid $iron;
+				border-bottom: $border;
 				align-items: center;
 
 				&.dropdown-header {
 					background: $white;
-					color: $nobel;
+					color: $label-default;
 					font-size: inherit;
-					border-top: 1px solid $iron;
-					border-bottom: 1px solid $iron;
+					border-top: $border;
+					border-bottom: $border;
 				}
 
 				&.dropdown-footer {
@@ -97,7 +91,7 @@ $dropitem: #f5fefe;
 				}
 
 				&:hover {
-					background: $dropitem;
+					background: $light-blue;
 					cursor: pointer;
 				}
 
